clean: changes imports to use path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["/*"],
-      "@assets/*": ["/assets/*"]
+      "@/*": ["./app/*"],
+      "@components/*": ["./components/*"],
+      "@constants/*": ["./constants/*"],
+      "@assets/*": ["./assets/*"]
     },
     "types": ["nativewind/types"]
   },
@@ -15,6 +17,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
+    "nativewind-env.d.ts",
+    "declarations.d.ts"
   ]
 }
