feature: creates logic of handling sign up steps by role

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./app/*"],
+      "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
       "@constants/*": ["./constants/*"],
-      "@assets/*": ["./assets/*"]
+      "@hooks/*": ["./hooks/*"]
     },
     "types": ["nativewind/types"]
   },
