--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,16 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env
+.env.*
+!.env.example
 
 # typescript
 *.tsbuildinfo
 
 app-example
+
+ios/
+android/
+
+.vscode
